# ADTO

./: .gitignore  AD_in_TO.ipynb  LICENSE  README.md  TO.ipynb  ad_backend.py  backend_utils.py  common_numpy.py  neuralTO.ipynb  nn_keras.py  non_ad_ops.py  pyproject.toml
examples/: 100_lines_NTO.ipynb  AD_in_TO.ipynb  TO.ipynb  neuralTO.ipynb
src/adto/: __init__.py  __init__.pyi  non_ad_ops.py  utils.py
src/adto/backends/: __init__.py  ad_backend.py  interface.py  jax_backend.py  torch_backend.py
