[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "adto"
version = "0.2.0"
description = "Automatic Differentiation for (neural) Topology Optimization"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]